src/objects/Brand__c.object
<CustomObject>
    <fields>
        <fullName>Brand_Description__c</fullName>
        <label>Brand Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_ID__c</fullName>
        <label>Brand ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Order__c</fullName>
        <description>Brand order</description>
        <label>Brand Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Priority__c</fullName>
        <label>Brand Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Type__c</fullName>
        <label>Brand Type</label>
        <picklist>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group / Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Variant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Variant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration &amp; Container</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Variant_Grouping__c</fullName>
        <label>Brand Variant Grouping</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_large_logo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calendar large logo</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Brands (Calendar large logo)</relationshipLabel>
        <relationshipName>Brands2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendar_small_logo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calendar small logo</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Brands (Calendar small logo)</relationshipLabel>
        <relationshipName>Brands1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Catalyst__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Catalyst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Gin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liqueur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Alcoholic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tequila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vodka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whiskey - NAW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Beer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spirits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Alcoholic Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT DEFINED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trading Goods (Non Beverage)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Content Description (logo)</description>
        <label>Content Description</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Trademarks_Logo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Core Trademarks Logo</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Brands (Core Trademarks Logo)</relationshipLabel>
        <relationshipName>Brands5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Trademarks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Core Trademarks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Order__c</fullName>
        <label>Filter Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filtering_logo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filtering logo</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Brands (Filtering logo)</relationshipLabel>
        <relationshipName>Brands3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generic_Brand__c</fullName>
        <formula>if(ISBLANK( Parent_Brand__c ), Name, Parent_Brand__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_Display__c</fullName>
        <label>Gold Standard - Display</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_Distribution__c</fullName>
        <label>Gold Standard - Distribution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_Image__c</fullName>
        <label>Gold Standard - Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_Shelf__c</fullName>
        <label>Gold Standard - Shelf</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_Text_Area_test__c</fullName>
        <label>Gold Standard - Text Area test</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Heritage_Logo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Heritage Logo</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Brands (Heritage Logo)</relationshipLabel>
        <relationshipName>Brands8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Heritage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heritage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Code__c</fullName>
        <externalId>true</externalId>
        <label>Full Hierarchy Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Innovation_Logo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Innovation Logo</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Brands (Innovation Logo)</relationshipLabel>
        <relationshipName>Brands7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Innovation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Innovation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L1_Classification_Code__c</fullName>
        <formula>L1_Classification__r.Hierarchy_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L1: Classification Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1_Classification_Description__c</fullName>
        <formula>L1_Classification__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L1: Classification Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1_Classification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L1: Classification</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Brands (L1: Classification)</relationshipLabel>
        <relationshipName>L1_Classification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2_Group_Type_Code__c</fullName>
        <formula>L2_Group_Type__r.Hierarchy_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2: Group / Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Group_Type_Description__c</fullName>
        <formula>L2_Group_Type__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2: Group / Type Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Group_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L2: Group / Type</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Brands (L2: Group / Type)</relationshipLabel>
        <relationshipName>L2_Group_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L3_Brand_Code__c</fullName>
        <formula>L3_Brand__r.Hierarchy_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L3: Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L3_Brand_Description__c</fullName>
        <formula>L3_Brand__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L3: Brand Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L3_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L3: Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Brands (L3: Brand)</relationshipLabel>
        <relationshipName>L3_Brand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L4_Brand_Variant_Code__c</fullName>
        <formula>L1_Classification__r.Hierarchy_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L4: Brand Variant Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L4_Brand_Variant_Description__c</fullName>
        <formula>L4_Brand_Variant__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L4: Brand Variant Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L4_Brand_Variant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L4: Brand Variant</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Brands (L4: Brand Variant)</relationshipLabel>
        <relationshipName>L4_Brand_Variant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L5_Individual_Variant_Code__c</fullName>
        <formula>L5_Individual_Variant__r.Hierarchy_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L5: Individual Variant Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L5_Individual_Variant_Description__c</fullName>
        <formula>L5_Individual_Variant__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L5: Individual Variant Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L5_Individual_Variant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L5: Individual Variant</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Brands (L5: Individual Variant)</relationshipLabel>
        <relationshipName>L5_Individual_Variant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L6_Volume_Code__c</fullName>
        <formula>L6_Volume__r.Hierarchy_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L6: Volume Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L6_Volume_Description__c</fullName>
        <formula>L6_Volume__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L6: Volume Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L6_Volume__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L6: Volume</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Brands (L6: Volume)</relationshipLabel>
        <relationshipName>L6_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L7_Configuration_Container_Code__c</fullName>
        <formula>L7_Configuration_Container__r.Hierarchy_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L7: Configuration &amp; Container Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L7_Configuration_Container_Desc__c</fullName>
        <formula>L7_Configuration_Container__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L7: Configuration &amp; Container Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L7_Configuration_Container__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L7: Configuration &amp; Container</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Brands (L7: Configuration &amp; Container)</relationshipLabel>
        <relationshipName>L7_Configuration_Container</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Material_ID__c</fullName>
        <label>Legacy Material ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifestyle_Logo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lifestyle Logo</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Brands (Lifestyle Logo)</relationshipLabel>
        <relationshipName>Brands9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lifestyle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lifestyle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Luxury_Logo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Luxury Logo</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Brands (Luxury Logo)</relationshipLabel>
        <relationshipName>BrandsAcHI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Luxury__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Luxury</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Magento_Id__c</fullName>
        <externalId>true</externalId>
        <label>Magento Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PIL_Logo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PIL Logo</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Brands (PIL Logo)</relationshipLabel>
        <relationshipName>Brands4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portfolio Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reserve_Brand_Logo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reserve Brand Logo</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Brands (Reserve Brand Logo)</relationshipLabel>
        <relationshipName>Brands6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reserve_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reserve Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Material_ID__c</fullName>
        <label>SAP Material ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBS_Level_3__c</fullName>
        <label>WBS Level 3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBS_Level_5__c</fullName>
        <label>WBS Level 5</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>diageo_direct_visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diageo Direct Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>font_color__c</fullName>
        <label>font color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gradient_bottom_color__c</fullName>
        <label>gradient bottom color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gradient_top_color__c</fullName>
        <label>gradient top color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stroke_color__c</fullName>
        <label>stroke color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Brand__c</columns>
        <columns>Reserve_Brand__c</columns>
        <columns>Core_Trademarks__c</columns>
        <columns>Brand_Variant_Grouping__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_to_be_launched</fullName>
        <columns>NAME</columns>
        <columns>Parent_Brand__c</columns>
        <columns>Brand_Variant_Grouping__c</columns>
        <columns>Generic_Brand__c</columns>
        <columns>Brand_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Classification__c</columns>
        <columns>Reserve_Brand__c</columns>
        <columns>Core_Trademarks__c</columns>
        <columns>Innovation__c</columns>
        <columns>Brand_Priority__c</columns>
        <columns>Brand_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Brand__c</field>
            <operation>equals</operation>
            <value>To Be Launched</value>
        </filters>
        <label>All - To Be Launched</label>
    </listViews>
    <listViews>
        <fullName>Gold_Standards</fullName>
        <columns>NAME</columns>
        <columns>Gold_Standard_Distribution__c</columns>
        <columns>Gold_Standard_Display__c</columns>
        <columns>Gold_Standard_Shelf__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Brand__c</field>
            <operation>equals</operation>
        </filters>
        <label>Gold Standards</label>
    </listViews>
    <listViews>
        <fullName>Spirits_WBS_View</fullName>
        <columns>NAME</columns>
        <columns>WBS_Level_3__c</columns>
        <columns>WBS_Level_5__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Classification__c</field>
            <operation>equals</operation>
            <value>Spirits</value>
        </filters>
        <filters>
            <field>Brand_Type__c</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filters>
        <label>Spirits WBS View</label>
    </listViews>
    <listViews>
        <fullName>Wines_WBS_View</fullName>
        <columns>NAME</columns>
        <columns>WBS_Level_3__c</columns>
        <columns>WBS_Level_5__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Classification__c</field>
            <operation>equals</operation>
            <value>Wine</value>
        </filters>
        <filters>
            <field>Brand_Type__c</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filters>
        <label>Wines WBS View</label>
    </listViews>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IA00000024gWEMAY_00NA0000009Yt5XMAS</fullName>
        <active>true</active>
        <errorMessage>Must be an &quot;Individual&quot; Brand Type</errorMessage>
        <field>SurveyLayout_Brand_Items__c.Brand__c</field>
        <filterItems>
            <field>Brand__c.Brand_Type__c</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Survey Distribution / Shelf / Display_Br</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IK0000000D0xFMAS_00NK0000000WC02MAG</fullName>
        <active>true</active>
        <field>BrandBottle_Size__c.Brand__c</field>
        <filterItems>
            <field>Brand__c.Brand_Type__c</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>BrandBottle Size_Brand</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IK0000000D1PxMAK_00NK0000000WI1VMAW</fullName>
        <active>true</active>
        <field>Gold_Standard_Met__c.Brand__c</field>
        <filterItems>
            <field>Brand__c.Parent_Brand__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Gold Standard Met_Brand</name>
    </namedFilters>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Parent_Brand</fullName>
        <active>true</active>
        <description>The Parent Brand cannot be changed once the Brand is created since the Magento API sync call does not support updating the ParentId of a Category</description>
        <errorConditionFormula>ISCHANGED(Parent_Brand__c)</errorConditionFormula>
        <errorDisplayField>Parent_Brand__c</errorDisplayField>
        <errorMessage>The Parent Brand cannot be changed once the Brand is created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Portfolio_Brand_Creation</fullName>
        <active>true</active>
        <description>Prevents a new portfolio brand from being created</description>
        <errorConditionFormula>(PRIORVALUE(Portfolio_Brand__c) = FALSE) &amp;&amp; (Portfolio_Brand__c = TRUE)</errorConditionFormula>
        <errorMessage>Only one brand can be marked as &quot;Portfolio Brand&quot;</errorMessage>
    </validationRules>
</CustomObject>